# configparser-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-LGPL  LICENSE-MIT  README.md  test
.github/workflows/: rust.yaml
src/: configparser.rs  ini.rs  lib.rs  test.rs
tests/: test.ini  test.rs  test2.ini  test_cascade_defaults.ini  test_more.ini  test_multiline.ini
