[package]
name = "configparser"
version = "3.1.0"
authors = ["QEDK <qedk.en@gmail.com>"]
edition = "2021"
description = "A simple configuration parsing utility with no dependencies that allows you to parse INI and ini-style syntax. You can use this to write Rust programs which can be customized by end users easily."
homepage = "https://github.com/QEDK/configparser-rs"
repository = "https://github.com/QEDK/configparser-rs"
documentation = "https://docs.rs/configparser"
readme = "README.md"
license = "MIT OR LGPL-3.0-or-later"
keywords = ["config", "ini", "settings", "configuration", "parser"]
categories = ["config", "encoding", "parser-implementations"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
indexmap = { version = "2.2.6", optional = true }
tokio = { version = "1.38.0", optional = true, features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["fs", "macros", "rt-multi-thread"] }

[features]
async-std = ["tokio"]
